syntax = "proto3";

package proto;
option go_package = "../pb";

// protoc -I=pb --go_out=pb  --go-grpc_out=pb  pb/admin_service.proto

message EmptyAdminReq{
    
}

message AdminRes {
    string err = 1;
}

message Localization{
    string title = 1;
    string description = 2;
}

message ChangeStatusReq{
    int32 id = 1;
}

service Producers{
    rpc RegisterProducer (RegProducerReq) returns (AdminRes){}
    rpc GetListOfProducers (EmptyAdminReq) returns (GetListOfProducersRes){}
    rpc ChangeProducerStatus (ChangeStatusReq) returns (AdminRes){}
}


message Producer{
    int32 id = 1;
    repeated string photos = 2;
    bool status = 3;
    map<string, Localization>  localizations = 4;
}

message GetListOfProducersRes{
    message result{
        int32 producer_id = 1;
        string title = 2;
        repeated string photos = 3;
    }
    repeated result producerslist = 1 ; 
    string err = 2;
}

message RegProducerReq{
    repeated string photos = 1;
    bool status = 2;
    map<string, Localization> localizations = 3;
}



service Products {
    rpc RegisterParentProduct (RegParentProductReq) returns (AdminRes){}
    rpc RegisterProduct (RegProductReq) returns (AdminRes){}
    rpc GetListOfProducts (EmptyAdminReq) returns (GetListOfProductsRes){}
    rpc ChangeProductsStatus (ChangeStatusReq) returns (AdminRes){}
    rpc ChangeParentProductsStatus (ChangeStatusReq) returns (AdminRes){}
}

message Product {
    int32 parent_id = 1;
    string model = 2;
    string sku = 3;
    string upc = 4;
    string jan = 5;
    string usbn = 6;
    string mpn = 7;
    repeated string photos = 8;
    int32 amount = 9;
    double rating = 10;
    int32 current_discount = 11;
    bool status = 12;
    map<string, Localization>  localizations = 13;
}

message RegParentProductReq{
    string model = 1;
    string sku = 2;
    string upc = 3;
    string jan = 4;
    string usbn = 5;
    string mpn = 6;
    bool status = 7;
    map<string, Localization>  localizations = 8;
}

message RegProductReq{
    int32 parent_id = 1;
    string model = 2;
    string sku = 3;
    string upc = 4;
    string jan = 5;
    string usbn = 6;
    string mpn = 7;
    repeated string photos = 8;
    int32 amount = 9;
    bool status = 10;
    map<string, Localization>  localizations = 11;

}


message GetListOfProductsRes{
    message result{
        int32 product_id = 1;
        string title = 2;
        repeated string photos = 3;
        int32 price = 4;
    }
    repeated result productslist = 1 ; 
    string err = 2;
}

service Groups {
    // rpc RegisterParentGroup (RegGroupReq) returns (AdminRes){}
    rpc RegisterGroup (RegGroupReq) returns (AdminRes){}
    rpc GetListOfGroups (EmptyAdminReq) returns (GetListOfGroupsRes){}
    rpc ChangeGroupsStatus (ChangeStatusReq) returns (AdminRes){}
    rpc ChangeParentGroupsStatus (ChangeStatusReq) returns (AdminRes){}
}

message RegParentGroupReq{
    repeated string photos = 1;
    bool status = 2;
    map<string, Localization>  localizations = 13;
}

message RegGroupReq{
    int32 parent_id = 1;
    repeated string photos = 2;
    bool status = 3;
    map<string, Localization>  localizations = 13;
}

message GetListOfGroupsRes{
    message result{
        int32 group_id = 1;
        string title = 2;
        repeated string photos = 3;
    }
    repeated result grouplist = 1 ; 
    string err = 2;
}

service Languages{
    rpc NewLanguage (NewLangReq) returns (AdminRes){}
    rpc GetListOfLanguages (EmptyAdminReq) returns (GetListOfLanguagesRes){}
    rpc ChangeLanguageStatus (ChangeLanguageStatusReq) returns (AdminRes){}
}

message Language {
    int32 lang_id = 1;
    string code = 2;
    string image = 3; 
    string locale = 4; 
    string lang_name = 5;
    int32 sort_order = 6;
    bool status = 9;
}


message NewLangReq{
   Language language = 1;
}

message GetListOfLanguagesRes{
    repeated Language languages = 1;
    string err = 2;
}

message ChangeLanguageStatusReq{
    int32 lang_id = 1;
}